more details in buildkite job

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,5 +3,7 @@ steps:
     command:
       - echo "check out gh-pages"
       - git checkout gh-pages
+      - git pull
+      - ls -l
       - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@dev.www.umass.edu rm -rf /var/www/dev.www.umass.edu/quantum/active/*
       - scp -i /id_ed25519_private_key -o "StrictHostKeyChecking no" -r $(pwd)/* www-quantum@dev.www.umass.edu:/var/www/dev.www.umass.edu/quantum/active
