--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,3 +7,4 @@ steps:
       - ls -l
       - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@dev.www.umass.edu rm -rf /var/www/dev.www.umass.edu/quantum/active/*
       - scp -i /id_ed25519_private_key -o "StrictHostKeyChecking no" -r $(pwd)/* www-quantum@dev.www.umass.edu:/var/www/dev.www.umass.edu/quantum/active
+      - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@dev.www.umass.edu ls -l /var/www/dev.www.umass.edu/quantum/active/
