add PROD to deploy script

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -8,3 +8,6 @@ steps:
       - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@dev.www.umass.edu rm -rf /var/www/dev.www.umass.edu/quantum/active/*
       - scp -i /id_ed25519_private_key -o "StrictHostKeyChecking no" -r $(pwd)/* www-quantum@dev.www.umass.edu:/var/www/dev.www.umass.edu/quantum/active
       - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@dev.www.umass.edu ls -l /var/www/dev.www.umass.edu/quantum/active/
+      - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@www.umass.edu rm -rf /var/www/www.umass.edu/quantum/active/*
+      - scp -i /id_ed25519_private_key -o "StrictHostKeyChecking no" -r $(pwd)/* www-quantum@www.umass.edu:/var/www/www.umass.edu/quantum/active
+      - ssh -i /id_ed25519_private_key -o "StrictHostKeyChecking no" www-quantum@www.umass.edu ls -l /var/www/www.umass.edu/quantum/active/
